# TacticSail-AI-STEM

./: .gitignore  LICENSE  README.md  TACTICALSAIL_V1.md  audit-initial-v74.json  pyproject.toml
data/: area_b.example.json  bot_names.example.json  race_scene.example.json
data/bots/: BOT_01_paolo.json  BOT_02_filippo.json  BOT_03_enrico.json  BOT_04_giuseppe.json  BOT_05_emanuele.json  BOT_06_elia.json  BOT_07_simeon.json
data/maps/: area.kml  prova.kml
data/raw/: metasail_log.csv
data/raw/dwd_icon_eu_2026062521_000/: icon-eu_europe_regular-lat-lon_single-level_2026062521_000_U_10M.grib2.bz2  (+1 more)
data/tactics/: ora_area_b.example.json
data/wind/: ora_sintetica_10kn.json
docs/: DEVPOST_SUBMISSION.md  JUDGE_DEMO_CHECKLIST.md  PITCH_SCRIPT.md  PROMPT_ENGINEERING.md
scripts/: auto_calibrate_bot_profiles.py  build_athlete_tactical_profiles.py  build_hackathon_readiness.py  build_regatta_ai_models.py  build_wind_field.py  calibrate_regatta_replay.py  chat.py  compare_track.py  extract_dataset_v11.py  gps_dna_similarity.py  serve_ui.py  simulate_ai_ensemble.py  simulate_race.py  verify_hackathon_demo.py  verify_tactic_variability.py
src/the_mastery_mentors/: __init__.py  cli.py  context_builder.py  dashboard.py  gpx_analysis.py  grib_fetcher.py  hydrodynamics.py  kinematics.py  loader.py  metasail_parser.py  models.py  qwen_runtime.py  retrieval.py  schemas.py  wind_field.py
web/: app.broken-zigzag-v101-backup.js  app.js  bot_ai_brain.js  index.broken-zigzag-v101-backup.html  index.html  styles.css  tactical_bot_engine.js  topo_wind.js  wind_ai_engine.js
(+70 files in other folders)
