[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-mastery-mentors"
version = "0.1.0"
description = "Area B regatta simulation context builder for Qwen 3.5 4B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "xarray",
    "cfgrib",
    "eccodes",
    "mlx-lm; platform_system == 'Darwin'",
    "mlx-vlm; platform_system == 'Darwin'",
    "torch",
    "torch-directml; platform_system == 'Windows'",
    "transformers",
    "huggingface_hub[hf_xet]",
]

[project.scripts]
tmm = "the_mastery_mentors.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
